<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/customBackground"
    style="@style/Theme.Project.ActionBarStyle"
    tools:context=".NotificationListener.NotificationSettings">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/application_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="310dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/customBackground"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/chatEditText"
        android:layout_width="368dp"
        android:layout_height="59dp"
        android:layout_marginTop="136dp"
        android:autofillHints=""
        android:background="@drawable/background_edittext_white"
        android:ems="10"
        android:hint="@string/conversation_input_hint"
        android:imeOptions="actionNone"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        app:layout_constraintBottom_toTopOf="@+id/application_recycler_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.193"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/chatInputDeleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="216dp"
        android:background="@drawable/background_button"
        android:text="@string/button_text_3"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/application_recycler_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.79" />

    <Button
        android:id="@+id/chatInputButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="216dp"
        android:background="@drawable/background_button"
        android:text="@string/button_text_2"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/application_recycler_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.145"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.791" />

    <Button
        android:id="@+id/appInputDeleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="28dp"
        android:text="@string/app_button_text_2"
        android:background="@drawable/background_button"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/application_recycler_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.004" />

    <Button
        android:id="@+id/applicationInputButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="28dp"
        android:text="@string/app_button_text_1"
        android:background="@drawable/background_button"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/application_recycler_view"
        app:layout_constraintEnd_toStartOf="@+id/appInputDeleteButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.004"/>

    <Button
        android:id="@+id/applicationListButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="28dp"
        android:text="@string/app_button_text_3"
        android:background="@drawable/background_button"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/application_recycler_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/appInputDeleteButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.004" />

    <Button
        android:id="@+id/chatListButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="216dp"
        android:background="@drawable/background_button"
        android:text="@string/button_text_4"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/application_recycler_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.857"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.791" />

    <EditText
        android:id="@+id/appCountInput"
        android:layout_width="270dp"
        android:layout_height="55dp"
        android:layout_marginTop="72dp"
        android:autofillHints=""
        android:background="@drawable/background_edittext_white"
        android:ems="10"
        android:hint="@string/app_count_input_hint"
        android:inputType="number"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        app:layout_constraintBottom_toTopOf="@+id/application_recycler_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.113"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.068" />

    <Button
        android:id="@+id/appCountSubmitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:background="@drawable/background_button"
        android:text="@string/button_text_5"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/application_recycler_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.405"
        app:layout_constraintStart_toEndOf="@+id/appCountInput"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.085" />

</androidx.constraintlayout.widget.ConstraintLayout>