<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardBackgroundColor="@color/cardview_light_background"
        app:cardCornerRadius="16dp"
        android:elevation="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/applicationLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/content_description"
                app:srcCompat="@drawable/discord_logo_80_38" />

            <TextView
                android:id="@+id/notificationTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/discord_notification_title"
                android:background="@drawable/background_edittext_white"
                android:textSize="24sp"
                android:textColor="@color/black"
                app:layout_constraintStart_toEndOf="@+id/applicationLogo"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/notificationText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/discord_notification_text"
                android:background="@drawable/background_edittext_white"
                android:textSize="16sp"
                android:textColor="@color/black"
                app:layout_constraintStart_toEndOf="@+id/applicationLogo"
                app:layout_constraintTop_toBottomOf="@+id/notificationTitle" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>